--- a/launchd/albert.order.asthma.inhaler.plist
+++ b/launchd/albert.order.asthma.inhaler.plist
@@ -2,12 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
     <dict>
+
         <key>Label</key>
         <string>albert.order.asthma.inhaler</string>
-        <key>RunAtLoad</key>
-        <false/>
+
         <key>Program</key>
         <string>/Users/Albert/Repos/Scripts/bash/launchd/albert.order.asthma.inhaler.sh</string>
+
         <key>StartCalendarInterval</key>
         <dict>
             <key>Minute</key>
@@ -17,5 +18,17 @@
             <key>Day</key>
             <integer>5</integer>
         </dict>
+
+        <key>StandardOutPath</key>
+        <string>/Users/Albert/Repos/Scripts/backup/cronerror.log</string>
+        <key>StandardErrorPath</key>
+        <string>/Users/Albert/Repos/Scripts/backup/cronerror.log</string>
+
+        <key>KeepAlive</key>
+        <false/>
+
+        <key>RunAtLoad</key>
+        <false/>
+
     </dict>
 </plist>
