Changed DocumentRoot in httpd.conf

--- a/backup/httpd.conf
+++ b/backup/httpd.conf
@@ -167,7 +167,8 @@ ServerAdmin you@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/Library/WebServer/Documents"
+# DocumentRoot "/Library/WebServer/Documents"
+DocumentRoot "/Users/Albert/Repos/Nimzo/httpdocs"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -194,7 +195,7 @@ DocumentRoot "/Library/WebServer/Documents"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/Library/WebServer/Documents">
+<Directory "/Users/Albert/Repos/Nimzo/httpdocs">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
