--- a/backup/httpd.conf
+++ b/backup/httpd.conf
@@ -215,7 +215,7 @@ DocumentRoot "/Users/Albert/Repos/Nimzo/httpdocs"
     # It can be "All", "None", or any combination of the keywords:
     #   Options FileInfo AuthConfig Limit
     #
-    AllowOverride None
+    AllowOverride All
 
     #
     # Controls who can get stuff from this server.
