--- a/backup/php.ini
+++ b/backup/php.ini
@@ -1859,3 +1859,7 @@ ldap.max_links = -1
 ; Local Variables:
 ; tab-width: 4
 ; End:
+
+;***** Added by go-pear
+include_path=".:/Users/Albert/bin/pear/share/pear"
+;*****
