Updated PHP.ini to include PEAR (now in: /usr/local)

--- a/backup/php.ini
+++ b/backup/php.ini
@@ -1861,5 +1861,5 @@ ldap.max_links = -1
 ; End:
 
 ;***** Added by go-pear
-include_path=".:/Users/Albert/bin/pear/share/pear"
+include_path=".:/usr/local/share/pear"
 ;*****
