Enabled vhosting and added vhosts configuration file to version control.

--- a/backup/httpd.conf
+++ b/backup/httpd.conf
@@ -168,7 +168,7 @@ ServerAdmin you@example.com
 # symbolic links and aliases may be used to point to other locations.
 #
 # DocumentRoot "/Library/WebServer/Documents"
-DocumentRoot "/Users/Albert/Repos/Sleek"
+DocumentRoot "/Users/Albert/Repos/Nimzo/httpdocs"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -195,7 +195,7 @@ DocumentRoot "/Users/Albert/Repos/Sleek"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/Users/Albert/Repos/Sleek">
+<Directory "/Users/Albert/Repos/Nimzo/httpdocs">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -476,7 +476,7 @@ Include /private/etc/apache2/extra/httpd-userdir.conf
 #Include /private/etc/apache2/extra/httpd-info.conf
 
 # Virtual hosts
-#Include /private/etc/apache2/extra/httpd-vhosts.conf
+Include /private/etc/apache2/extra/httpd-vhosts.conf
 
 # Local access to the Apache HTTP Server Manual
 Include /private/etc/apache2/extra/httpd-manual.conf
