--- a/backup/httpd-vhosts.conf
+++ b/backup/httpd-vhosts.conf
@@ -25,21 +25,17 @@ NameVirtualHost *:80
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
 <VirtualHost *:80>
-    ServerAdmin webmaster@dummy-host.example.com
-    DocumentRoot "/usr/docs/dummy-host.example.com"
-    ServerName dummy-host.example.com
-    ServerAlias www.dummy-host.example.com
-    ErrorLog "/private/var/log/apache2/dummy-host.example.com-error_log"
-    CustomLog "/private/var/log/apache2/dummy-host.example.com-access_log" common
+    ServerName sleek
+    ServerAlias sleek
+    DocumentRoot "/Users/Albert/Repos/Sleek/httpdocs"
+    ErrorLog "/private/var/log/apache2/sleek-error_log"
+    CustomLog "/private/var/log/apache2/sleek-access_log" common
+    ServerAdmin alb3rtuk@me.com
+        <Directory "/Users/Albert/Repos/Sleek/httpdocs">
+            Options Indexes FollowSymLinks
+            AllowOverride All
+            Order allow,deny
+            Allow from all
+        </Directory>
 </VirtualHost>
-
-<VirtualHost *:80>
-    ServerAdmin webmaster@dummy-host2.example.com
-    DocumentRoot "/usr/docs/dummy-host2.example.com"
-    ServerName dummy-host2.example.com
-    ErrorLog "/private/var/log/apache2/dummy-host2.example.com-error_log"
-    CustomLog "/private/var/log/apache2/dummy-host2.example.com-access_log" common
-</VirtualHost>
-
-
 
