Fuck yea, dry wall. Setup Sleek as a virtual host.

--- a/backup/httpd-vhosts.conf
+++ b/backup/httpd-vhosts.conf
@@ -25,17 +25,17 @@ NameVirtualHost *:80
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
 <VirtualHost *:80>
-    ServerName sleek
-    ServerAlias sleek
-    DocumentRoot "/Users/Albert/Repos/Sleek/httpdocs"
-    ErrorLog "/private/var/log/apache2/sleek-error_log"
-    CustomLog "/private/var/log/apache2/sleek-access_log" common
-    ServerAdmin alb3rtuk@me.com
-        <Directory "/Users/Albert/Repos/Sleek/httpdocs">
-            Options Indexes FollowSymLinks
-            AllowOverride All
-            Order allow,deny
-            Allow from all
-        </Directory>
+    ServerName localhost
+    DocumentRoot "/Users/Albert/Repos/Nimzo/httpdocs"
 </VirtualHost>
 
+<VirtualHost *:80>
+    ServerName localhost.sleek
+    DocumentRoot "/Users/Albert/Repos/Sleek/httpdocs/"
+    <Directory "/Users/Albert/Repos/Sleek/httpdocs/">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+</VirtualHost>
