--- a/backup/httpd.conf
+++ b/backup/httpd.conf
@@ -179,10 +179,10 @@ DocumentRoot "/Users/Albert/Repos/Nimzo/httpdocs"
 # features.  
 #
 <Directory />
-    Options FollowSymLinks
-    AllowOverride None
+    Options Indexes FollowSymLinks Includes ExecCGI
+    AllowOverride All
     Order deny,allow
-    Deny from all
+    Allow from all
 </Directory>
 
 #
