Installed XDebug and fixed update-apache script to update php.ini.

--- a/backup/php.ini
+++ b/backup/php.ini
@@ -729,6 +729,8 @@ user_dir =
 ; On windows:
 ; extension_dir = "ext"
 
+extension_dir = "/usr/lib/php/extensions/no-debug-non-zts-20100525"
+
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
 ; disabled on them.
@@ -1863,3 +1865,9 @@ ldap.max_links = -1
 ;***** Added by go-pear
 include_path=".:/usr/local/share/pear"
 ;*****
+
+zend_extension="/usr/lib/php/extensions/no-debug-non-zts-20100525/xdebug.so"
+
+xdebug.var_display_max_children = 999
+xdebug.var_display_max_data = 99999
+xdebug.var_display_max_depth = 100
