--- a/backup/php.ini
+++ b/backup/php.ini
@@ -1871,3 +1871,8 @@ zend_extension="/usr/lib/php/extensions/no-debug-non-zts-20100525/xdebug.so"
 xdebug.var_display_max_children = 999
 xdebug.var_display_max_data = 99999
 xdebug.var_display_max_depth = 100
+
+xdebug.remote_enable=1
+xdebug.remote_port="9000"
+xdebug.profiler_enable=1
+xdebug.profiler_output_dir="/tmp"
