--- a/backup/php.ini
+++ b/backup/php.ini
@@ -1855,6 +1855,8 @@ ldap.max_links = -1
 ; Default: Compiled in into libmcrypt (usually /usr/local/lib/libmcrypt)
 ;mcrypt.modes_dir=
 
+extension=mcrypt.so
+
 [dba]
 ;dba.default_handler=
 
