--- a/backup/httpd-vhosts.conf
+++ b/backup/httpd-vhosts.conf
@@ -39,3 +39,14 @@ NameVirtualHost *:80
         Allow from all
     </Directory>
 </VirtualHost>
+
+<VirtualHost *:80>
+    ServerName localhost.brooklins
+    DocumentRoot "/Users/Albert/Repos/Brooklins/"
+    <Directory "/Users/Albert/Repos/Brooklins/">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+</VirtualHost>
