Added Nimzo to apache vhosts.

--- a/backup/httpd-vhosts.conf
+++ b/backup/httpd-vhosts.conf
@@ -30,9 +30,9 @@ NameVirtualHost *:80
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName localhost.sleek
-    DocumentRoot "/Users/Albert/Repos/Sleek/httpdocs/"
-    <Directory "/Users/Albert/Repos/Sleek/httpdocs/">
+    ServerName localhost.brooklins
+    DocumentRoot "/Users/Albert/Repos/Brooklins/httpdocs"
+    <Directory "/Users/Albert/Repos/Brooklins/httpdocs">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order allow,deny
@@ -41,9 +41,20 @@ NameVirtualHost *:80
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName localhost.brooklins
-    DocumentRoot "/Users/Albert/Repos/Brooklins/"
-    <Directory "/Users/Albert/Repos/Brooklins/">
+    ServerName localhost.nimzo
+    DocumentRoot "/Users/Albert/Repos/Nimzo/httpdocs"
+    <Directory "/Users/Albert/Repos/Nimzo/httpdocs">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName localhost.sleek
+    DocumentRoot "/Users/Albert/Repos/Sleek/httpdocs"
+    <Directory "/Users/Albert/Repos/Sleek/httpdocs">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order allow,deny
