Added index.php to automatically discovered files by apache.

--- a/backup/httpd.conf
+++ b/backup/httpd.conf
@@ -230,7 +230,7 @@ DocumentRoot "/Users/Albert/Repos/nimzo-php/httpdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.html index.php
 </IfModule>
 
 #
