--- a/backup/httpd-vhosts.conf
+++ b/backup/httpd-vhosts.conf
@@ -52,9 +52,9 @@ NameVirtualHost *:80
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName localhost.sleek
-    DocumentRoot "/Users/Albert/Repos/Sleek/httpdocs"
-    <Directory "/Users/Albert/Repos/Sleek/httpdocs">
+    ServerName localhost.docs
+    DocumentRoot "/Users/Albert/Repos/nimzo-php-docs/docs"
+    <Directory "/Users/Albert/Repos/nimzo-php-docs/docs">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order allow,deny
