--- a/backup/httpd-vhosts.conf
+++ b/backup/httpd-vhosts.conf
@@ -30,9 +30,9 @@ NameVirtualHost *:80
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName localhost.brooklins
-    DocumentRoot "/Users/Albert/Repos/Brooklins/httpdocs"
-    <Directory "/Users/Albert/Repos/Brooklins/httpdocs">
+    ServerName localhost.brooklins-legacy
+    DocumentRoot "/Users/Albert/Repos/brooklins-legacy/httpdocs"
+    <Directory "/Users/Albert/Repos/brooklins-legacy/httpdocs">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order allow,deny
@@ -41,7 +41,7 @@ NameVirtualHost *:80
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName localhost.nimzo
+    ServerName localhost.nimzo-php
     DocumentRoot "/Users/Albert/Repos/nimzo-php/httpdocs"
     <Directory "/Users/Albert/Repos/nimzo-php/httpdocs">
         Options Indexes FollowSymLinks
@@ -52,9 +52,20 @@ NameVirtualHost *:80
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName localhost.docs
+    ServerName localhost.nimzo-php-docs
     DocumentRoot "/Users/Albert/Repos/nimzo-php-docs/docs"
     <Directory "/Users/Albert/Repos/nimzo-php-docs/docs">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName localhost.sleek-furniture
+    DocumentRoot "/Users/Albert/Repos/sleek-furniture/httpdocs"
+    <Directory "/Users/Albert/Repos/sleek-furniture/httpdocs">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order allow,deny
