Created new VHOST for eBay listings.

--- a/backup/httpd-vhosts.conf
+++ b/backup/httpd-vhosts.conf
@@ -41,6 +41,17 @@ NameVirtualHost *:80
 </VirtualHost>
 
 <VirtualHost *:80>
+    ServerName localhost.eBay
+    DocumentRoot "/Users/Albert/Repos/eBay/httpdocs"
+    <Directory "/Users/Albert/Repos/eBay/httpdocs">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
     ServerName localhost.nimzo-php
     DocumentRoot "/Users/Albert/Repos/nimzo-php/httpdocs"
     <Directory "/Users/Albert/Repos/nimzo-php/httpdocs">
