Added max_nesting_level of 200 to xdebug in php.ini.

--- a/backup/php.ini
+++ b/backup/php.ini
@@ -1873,6 +1873,7 @@ zend_extension="/usr/lib/php/extensions/no-debug-non-zts-20121212/xdebug.so"
 xdebug.var_display_max_children = 999
 xdebug.var_display_max_data = 99999
 xdebug.var_display_max_depth = 100
+xdebug.var_display_max_nesting_level = 200
 
 xdebug.remote_enable=1
 xdebug.remote_port="9000"
