Commented out unused v-hosts.

--- a/backup/httpd-vhosts.conf
+++ b/backup/httpd-vhosts.conf
@@ -25,16 +25,17 @@
     DocumentRoot "/Users/Albert/Repos/nimzo-php/httpdocs"
 </VirtualHost>
 
-<VirtualHost *:80>
-    ServerName localhost.brooklins-legacy
-    DocumentRoot "/Users/Albert/Repos/brooklins-legacy/httpdocs"
-    <Directory "/Users/Albert/Repos/brooklins-legacy/httpdocs">
-        Options Indexes FollowSymLinks
-        AllowOverride All
-        Order allow,deny
-        Allow from all
-    </Directory>
-</VirtualHost>
+
+# <VirtualHost *:80>
+#     ServerName localhost.brooklins-legacy
+#     DocumentRoot "/Users/Albert/Repos/brooklins-legacy/httpdocs"
+#     <Directory "/Users/Albert/Repos/brooklins-legacy/httpdocs">
+#         Options Indexes FollowSymLinks
+#         AllowOverride All
+#         Order allow,deny
+#         Allow from all
+#     </Directory>
+# </VirtualHost>
 
 <VirtualHost *:80>
     ServerName localhost.eBay
@@ -69,13 +70,13 @@
     </Directory>
 </VirtualHost>
 
-<VirtualHost *:80>
-    ServerName localhost.sleek-furniture
-    DocumentRoot "/Users/Albert/Repos/sleek-furniture/httpdocs"
-    <Directory "/Users/Albert/Repos/sleek-furniture/httpdocs">
-        Options Indexes FollowSymLinks
-        AllowOverride All
-        Order allow,deny
-        Allow from all
-    </Directory>
-</VirtualHost>
+# <VirtualHost *:80>
+#     ServerName localhost.sleek-furniture
+#     DocumentRoot "/Users/Albert/Repos/sleek-furniture/httpdocs"
+#     <Directory "/Users/Albert/Repos/sleek-furniture/httpdocs">
+#         Options Indexes FollowSymLinks
+#         AllowOverride All
+#         Order allow,deny
+#         Allow from all
+#     </Directory>
+# </VirtualHost>
