Re-instated the legacy nimzo client for reference.

--- a/backup/httpd-vhosts.conf
+++ b/backup/httpd-vhosts.conf
@@ -20,22 +20,22 @@
 # The first VirtualHost section is used for all requests that do not
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
+
 <VirtualHost *:80>
     ServerName localhost
     DocumentRoot "/Users/Albert/Repos/nimzo-php/httpdocs"
 </VirtualHost>
 
-
-# <VirtualHost *:80>
-#     ServerName localhost.brooklins-legacy
-#     DocumentRoot "/Users/Albert/Repos/brooklins-legacy/httpdocs"
-#     <Directory "/Users/Albert/Repos/brooklins-legacy/httpdocs">
-#         Options Indexes FollowSymLinks
-#         AllowOverride All
-#         Order allow,deny
-#         Allow from all
-#     </Directory>
-# </VirtualHost>
+<VirtualHost *:80>
+    ServerName localhost.nimzo-legacy
+    DocumentRoot "/Users/Albert/Repos/nimzo-legacy/httpdocs"
+    <Directory "/Users/Albert/Repos/nimzo-legacy/httpdocs">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+</VirtualHost>
 
 <VirtualHost *:80>
     ServerName localhost.nimzo-php
@@ -58,14 +58,3 @@
         Allow from all
     </Directory>
 </VirtualHost>
-
-# <VirtualHost *:80>
-#     ServerName localhost.sleek-furniture
-#     DocumentRoot "/Users/Albert/Repos/sleek-furniture/httpdocs"
-#     <Directory "/Users/Albert/Repos/sleek-furniture/httpdocs">
-#         Options Indexes FollowSymLinks
-#         AllowOverride All
-#         Order allow,deny
-#         Allow from all
-#     </Directory>
-# </VirtualHost>
