Gumtree script should be running fine now.. hopefully.

--- a/launchd/albert.gumtree.plist
+++ b/launchd/albert.gumtree.plist
@@ -18,7 +18,7 @@
         <string>/tmp/testlog.log</string>
 
         <key>KeepAlive</key>
-        <true/>
+        <false/>
 
         <key>RunAtLoad</key>
         <true/>
