--- a/backup/php.ini
+++ b/backup/php.ini
@@ -1865,7 +1865,7 @@ extension=mcrypt.so
 ; End:
 
 ;***** Added by go-pear
-include_path=".:/usr/local/share/pear"
+include_path=".:/usr/share/pear"
 ;*****
 
 zend_extension="/usr/lib/php/extensions/no-debug-non-zts-20121212/xdebug.so"
