Commit from Natalee's branch.

--- a/backup/httpd-vhosts.conf
+++ b/backup/httpd-vhosts.conf
@@ -27,6 +27,17 @@
 </VirtualHost>
 
 <VirtualHost *:80>
+    ServerName localhost.brooklins
+    DocumentRoot "/Users/Natalee/Repos/brooklins/httpdocs"
+    <Directory "/Users/Natalee/Repos/brooklins/httpdocs">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
     ServerName localhost.nimzo-legacy
     DocumentRoot "/Users/Natalee/Repos/nimzo-legacy/httpdocs"
     <Directory "/Users/Natalee/Repos/nimzo-legacy/httpdocs">
