--- a/backup/php.ini
+++ b/backup/php.ini
@@ -1855,6 +1855,7 @@ ldap.max_links = -1
 ; Default: Compiled in into libmcrypt (usually /usr/local/lib/libmcrypt)
 ;mcrypt.modes_dir=
 
+extension_dir = "/usr/lib/php/extensions/no-debug-non-zts-20100525/"
 extension=mcrypt.so
 
 [dba]
