Not sure.. but I finally managed to get mcrypt working on El Capitan. DO NOT TOUCH ANYTHING because it works :)

--- a/backup/php.ini
+++ b/backup/php.ini
@@ -729,7 +729,7 @@ user_dir =
 ; On windows:
 ; extension_dir = "ext"
 
-extension_dir = "/usr/lib/php/extensions/no-debug-non-zts-20121212/"
+; extension_dir = "/usr/lib/php/extensions/no-debug-non-zts-20121212/"
 
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
@@ -1845,7 +1845,7 @@ soap.wsdl_cache_limit = 5
 ldap.max_links = -1
 
 [mcrypt]
-; For more information about mcrypt settings see http://php.net/mcrypt-module-open
+; For more information about mcrypt settings see http://net/mcrypt-module-open
 
 ; Directory where to load mcrypt algorithms
 ; Default: Compiled in into libmcrypt (usually /usr/local/lib/libmcrypt)
