Deprecated update-apache. Loads of other changes.

--- a/config/php.ini
+++ b/config/php.ini
@@ -1855,6 +1855,8 @@ ldap.max_links = -1
 ; Default: Compiled in into libmcrypt (usually /usr/local/lib/libmcrypt)
 ;mcrypt.modes_dir=
 
+enable_dl = On
+extension_dir = "/usr/lib/php/extensions/no-debug-non-zts-20121212/"
 extension=mcrypt.so
 
 [dba]
