Renamed nimzo to -> blufin.

--- a/config/httpd-vhosts.conf
+++ b/config/httpd-vhosts.conf
@@ -23,13 +23,13 @@
 
 <VirtualHost *:80>
     ServerName localhost
-    DocumentRoot "/Users/Albert/Repos/nimzo-php/httpdocs"
+    DocumentRoot "/Users/Albert/Repos/blufin-php/httpdocs"
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName localhost.nimzo-legacy
-    DocumentRoot "/Users/Albert/Repos/nimzo-legacy/httpdocs"
-    <Directory "/Users/Albert/Repos/nimzo-legacy/httpdocs">
+    ServerName localhost.blufin-legacy
+    DocumentRoot "/Users/Albert/Repos/blufin-legacy/httpdocs"
+    <Directory "/Users/Albert/Repos/blufin-legacy/httpdocs">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order allow,deny
@@ -38,9 +38,9 @@
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName localhost.nimzo-php
-    DocumentRoot "/Users/Albert/Repos/nimzo-php/httpdocs"
-    <Directory "/Users/Albert/Repos/nimzo-php/httpdocs">
+    ServerName localhost.blufin-php
+    DocumentRoot "/Users/Albert/Repos/blufin-php/httpdocs"
+    <Directory "/Users/Albert/Repos/blufin-php/httpdocs">
         Options Indexes FollowSymLinks
         AllowOverride All
         Order allow,deny
